# haskell-socketio

./: Makefile  README.md  socketio.cabal
apps/: Main.hs
src/Network/: EngineIO.hs  SocketIO.hs
src/Network/EngineIO/: XHRPolling.hs
