name:          socketio
version:       0.1
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me)
maintainer:    Niklas Hambüchen (mail@nh2.me)
category:      Network
build-type:    Simple
License:       MIT
synopsis:      SocketIO - Haskell library and server
stability:     experimental
tested-With:   GHC==7.4.2
cabal-version: >= 1.10
homepage:      https://github.com/nh2/haskell-socketio
bug-Reports:   https://github.com/nh2/haskell-socketio/issues


source-repository head
  type: git
  location: git://github.com/nh2/haskell-socketio.git


library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Network.EngineIO
    Network.EngineIO.XHRPolling
  build-depends:
      base >= 4 && < 5
    , warp >= 1.3.7.1
    , wai >= 1.4
    , attoparsec >= 0.10.4.0
    , bytestring >= 0.10.0.2
    , resourcet >= 0.4.7.1
    , http-types >= 0.8.0
    , uuid >= 1.2.13
    , containers >= 0.5
    , transformers >= 0.3
  ghc-options:
    -Wall -fwarn-unused-imports


executable socketio
  default-language: Haskell2010
  main-is:
    Main.hs
  hs-source-dirs:
    apps
  build-depends:
      base >= 4 && < 5
    , socketio
  ghc-options:
    -Wall -fwarn-unused-imports -threaded
